<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/txtInput1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txtTambah"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.396"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.251" />

    <EditText
        android:id="@+id/txtInput2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txtKali"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.413"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.339" />

    <Button
        android:id="@+id/btnTambah"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:text="@string/txtButtonTambah"
        app:layout_constraintStart_toStartOf="@id/txtInput2"
        app:layout_constraintTop_toTopOf="@id/txtInput2"
        tools:visibility="visible" />

    <Button
        android:id="@+id/btnKali"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/txtButtonKali"
        app:layout_constraintStart_toStartOf="@id/btnTambah"
        app:layout_constraintTop_toTopOf="@id/btnTambah"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/txtViewResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/txtResult"
        android:gravity="center"
        android:hint="@string/txtResult"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@id/btnKali"
        app:layout_constraintTop_toTopOf="@id/btnKali"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>